Closes #5: Apparently, a sticky element with an ancestor with overflow with anything but visible does not correctly sticky. So, closing for the moment, but should probably readdress in the future.

--- a/app/javascript/src/glitterhoof/chronicle/styles.css
+++ b/app/javascript/src/glitterhoof/chronicle/styles.css
@@ -4,11 +4,8 @@
   height: 100%;
   padding: 1em 2em 0;
 
-  overflow-x: auto;
-  columns: 15em auto;
-  column-gap: 2em;
-
-  position: relative;
+  overflow-x: visible;
+  overflow-y: hidden;
 }
 
 .chronicle header {
@@ -19,4 +16,19 @@
 .chronicle header > * {
   margin-top: 0;
   text-align: center;
+}
+
+.events {
+  columns: 15em auto;
+  column-gap: 2em;
+
+  position: relative;
+
+  height: 100%;
+}
+
+.events section header {
+  position: sticky;
+  left: 0;
+  width: 15em;
 }
